--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "@types/sanitize-html": "^2.16.0",
     "@types/validator": "13.15.1",
@@ -37,8 +36,9 @@
     "cli-table3": "^0.6.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fast-jwt": "^6.0.2",
     "ignore": "^7.0.4",
-    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "openai": "^4.103.0",
     "partial-json": "^0.1.7",
     "sanitize-html": "^2.17.0",
